[gd_scene load_steps=34 format=2]

[ext_resource path="res://Parts/Legs/Legs.tscn" type="PackedScene" id=1]
[ext_resource path="res://Parts/Legs/Treads/treads_base.png" type="Texture" id=2]
[ext_resource path="res://Parts/Legs/Treads/treads_1.png" type="Texture" id=3]
[ext_resource path="res://Parts/Legs/Treads/treads_2.png" type="Texture" id=4]
[ext_resource path="res://Parts/Legs/Treads/Treads.gd" type="Script" id=5]
[ext_resource path="res://Parts/Legs/Treads/treads_trail.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 64, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 64, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 64, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 112, 64, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 64, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 64, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 64, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 80, 64, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 64, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 112, 64, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 144, 64, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 64, 16 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 1, 1, 1, 1, 0.836914, 0.836914, 0.836914, 0 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=27]
emission_shape = 2
emission_box_extents = Vector3( 10, 2, 1 )
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angle = 90.0
color_ramp = SubResource( 26 )

[node name="Legs" instance=ExtResource( 1 )]
script = ExtResource( 5 )
acceleration = 20.0

[node name="Base" type="Sprite" parent="." index="0"]
texture = ExtResource( 2 )

[node name="TreadsL" type="AnimatedSprite" parent="Base" index="0"]
position = Vector2( 0, -24 )
frames = SubResource( 12 )
frame = 4
playing = true
flip_h = true

[node name="TreadsR" type="AnimatedSprite" parent="Base" index="1"]
position = Vector2( 0, 24 )
frames = SubResource( 24 )
frame = 9
playing = true
flip_h = true

[node name="TreadTrailL" type="Particles2D" parent="Base" index="2"]
visible = false
position = Vector2( -9, -24 )
z_index = -1
amount = 40
lifetime = 2.0
explosiveness = 0.4
randomness = 0.22
visibility_rect = Rect2( -200, 0, 199.98, 0 )
local_coords = false
process_material = SubResource( 27 )
texture = ExtResource( 6 )

[node name="TreadTrailR" type="Particles2D" parent="Base" index="3"]
visible = false
position = Vector2( -9, 24 )
z_index = -1
amount = 40
lifetime = 2.0
explosiveness = 0.4
randomness = 0.22
visibility_rect = Rect2( -200, 0, 199.98, 0 )
local_coords = false
process_material = SubResource( 27 )
texture = ExtResource( 6 )
